--- a/probability_counter/notebook/ApproximateCounting.ipynb
+++ b/probability_counter/notebook/ApproximateCounting.ipynb
@@ -16,18 +16,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 684,
+   "execution_count": 731,
    "metadata": {},
    "outputs": [],
    "source": [
     "class ApproximateCounter:\n",
     "    \"\"\"\n",
-    "    106 words in sample.txt\n",
-    "    899641 words in shakespeare without license by word2016.\n",
+    "    Counts the frequency of every letter in a given text literary document.\n",
+    "    Metrics such as min, max and average number of occurences are also reported.\n",
+    "    Average pecentage of letter occurence in the text is also reported.\n",
     "    \"\"\"\n",
     "\n",
     "    def __init__(self):\n",
-    "        self.student_counter = 274356\n",
+    "        self.student_counter = 106382\n",
     "        random.seed = self.student_counter\n",
     "        self.textFilesDirectory = os.path.join(os.getcwd(), 'TextFiles')\n",
     "        \n",
@@ -43,7 +44,7 @@
     "        self.filename = filename\n",
     "        filename = filename + '.txt'\n",
     "        text_file_path = os.path.join(self.textFilesDirectory, filename)\n",
-    "        with open(text_file_path, 'r') as file:\n",
+    "        with open(text_file_path, 'r', encoding=\"utf8\") as file:\n",
     "            text_data = file.readlines()\n",
     "\n",
     "        # combine all lines from text into a big string\n",
@@ -61,8 +62,9 @@
     "            dir_name [str] - output folder to save csv in. default 'output'\n",
     "        \"\"\"\n",
     "        if filename is not None:\n",
-    "            if not isinstance(str, filename):\n",
-    "                filename = str(filename) + '.csv'\n",
+    "            if not isinstance(filename, str):\n",
+    "                filename = str(filename)\n",
+    "            filename += '_' + self.count_method + '.csv'\n",
     "        else:\n",
     "            filename = self.filename + '_' + self.count_method + '.csv'\n",
     "\n",
@@ -73,7 +75,6 @@
     "            os.mkdir(output_directory)\n",
     "\n",
     "        self.register.to_csv(output_file_path, index = False, header=True)\n",
-    "        print('Save Complete!!')\n",
     "\n",
     "\n",
     "    def FormatRegister(self):\n",
@@ -96,7 +97,12 @@
     "        self.register['Maximum'] = Max\n",
     "        self.register['Average'] = Average.apply(np.ceil).astype(int)\n",
     "\n",
-    "        self.register = self.register.sort_values(by='Average')\n",
+    "        # computing average percentage\n",
+    "        avg_sum = np.sum(self.register['Average'], axis=None)\n",
+    "        avg_percent = (self.register['Average']/avg_sum)*100\n",
+    "        self.register['Avg Percent (100%)'] = avg_percent.round(4) # round to 2dps\n",
+    "\n",
+    "        self.register.sort_values(by='Avg Percent (100%)', ascending=False, inplace=True)\n",
     "\n",
     "\n",
     "    def AddCounts2Register(self, exp_number, rows):\n",
@@ -135,7 +141,7 @@
     "                    else:\n",
     "                        rows.update({letter : 1})\n",
     "            \n",
-    "            print('Experiment (', exp_number, ') for', self.count_method,'Done!')\n",
+    "            # print('Experiment (', exp_number, ') for', self.count_method,'Done!')\n",
     "\n",
     "            self.AddCounts2Register(exp_number, rows)\n",
     "        self.FormatRegister()\n",
@@ -160,7 +166,7 @@
     "                    else:\n",
     "                        rows.update({letter : 1})\n",
     "            \n",
-    "            print('Experiment (', exp_number, ') for', self.count_method,'Done!')\n",
+    "            # print('Experiment (', exp_number, ') for', self.count_method,'Done!')\n",
     "\n",
     "            self.AddCounts2Register(exp_number, rows)\n",
     "        self.FormatRegister()\n",
@@ -183,7 +189,7 @@
     "                else:\n",
     "                    rows.update({letter : 1})\n",
     "\n",
-    "            print('Experiment (', exp_number, ') for', self.count_method,'Done!')\n",
+    "            # print('Experiment (', exp_number, ') for', self.count_method,'Done!')\n",
     "\n",
     "            self.AddCounts2Register(exp_number, rows)\n",
     "        self.FormatRegister()\n",
@@ -192,190 +198,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 688,
+   "execution_count": 732,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Experiment ( 1 ) for ExactCounter Done!\n",
-      "Experiment ( 2 ) for ExactCounter Done!\n",
-      "Experiment ( 3 ) for ExactCounter Done!\n",
-      "Experiment ( 4 ) for ExactCounter Done!\n",
-      "Experiment ( 5 ) for ExactCounter Done!\n",
-      "Experiment ( 6 ) for ExactCounter Done!\n",
-      "Experiment ( 7 ) for ExactCounter Done!\n",
-      "Experiment ( 8 ) for ExactCounter Done!\n",
-      "Experiment ( 9 ) for ExactCounter Done!\n",
-      "Experiment ( 10 ) for ExactCounter Done!\n",
-      "Experiment ( 11 ) for ExactCounter Done!\n",
-      "Experiment ( 12 ) for ExactCounter Done!\n",
-      "Experiment ( 13 ) for ExactCounter Done!\n",
-      "Experiment ( 14 ) for ExactCounter Done!\n",
-      "Experiment ( 15 ) for ExactCounter Done!\n",
-      "Experiment ( 16 ) for ExactCounter Done!\n",
-      "Experiment ( 17 ) for ExactCounter Done!\n",
-      "Experiment ( 18 ) for ExactCounter Done!\n",
-      "Experiment ( 19 ) for ExactCounter Done!\n",
-      "Experiment ( 20 ) for ExactCounter Done!\n",
-      "Experiment ( 21 ) for ExactCounter Done!\n",
-      "Experiment ( 22 ) for ExactCounter Done!\n",
-      "Experiment ( 23 ) for ExactCounter Done!\n",
-      "Experiment ( 24 ) for ExactCounter Done!\n",
-      "Experiment ( 25 ) for ExactCounter Done!\n",
-      "Experiment ( 26 ) for ExactCounter Done!\n",
-      "Experiment ( 27 ) for ExactCounter Done!\n",
-      "Experiment ( 28 ) for ExactCounter Done!\n",
-      "Experiment ( 29 ) for ExactCounter Done!\n",
-      "Experiment ( 30 ) for ExactCounter Done!\n",
-      "Experiment ( 31 ) for ExactCounter Done!\n",
-      "Experiment ( 32 ) for ExactCounter Done!\n",
-      "Experiment ( 33 ) for ExactCounter Done!\n",
-      "Experiment ( 34 ) for ExactCounter Done!\n",
-      "Experiment ( 35 ) for ExactCounter Done!\n",
-      "Experiment ( 36 ) for ExactCounter Done!\n",
-      "Experiment ( 37 ) for ExactCounter Done!\n",
-      "Experiment ( 38 ) for ExactCounter Done!\n",
-      "Experiment ( 39 ) for ExactCounter Done!\n",
-      "Experiment ( 40 ) for ExactCounter Done!\n",
-      "Experiment ( 41 ) for ExactCounter Done!\n",
-      "Experiment ( 42 ) for ExactCounter Done!\n",
-      "Experiment ( 43 ) for ExactCounter Done!\n",
-      "Experiment ( 44 ) for ExactCounter Done!\n",
-      "Experiment ( 45 ) for ExactCounter Done!\n",
-      "Experiment ( 46 ) for ExactCounter Done!\n",
-      "Experiment ( 47 ) for ExactCounter Done!\n",
-      "Experiment ( 48 ) for ExactCounter Done!\n",
-      "Experiment ( 49 ) for ExactCounter Done!\n",
-      "Experiment ( 50 ) for ExactCounter Done!\n",
-      "Save Complete!!\n",
-      "It took ( 16.68539261817932 ) secs to complete ExactCounter\n",
-      "Experiment ( 1 ) for FixedProbCounter Done!\n",
-      "Experiment ( 2 ) for FixedProbCounter Done!\n",
-      "Experiment ( 3 ) for FixedProbCounter Done!\n",
-      "Experiment ( 4 ) for FixedProbCounter Done!\n",
-      "Experiment ( 5 ) for FixedProbCounter Done!\n",
-      "Experiment ( 6 ) for FixedProbCounter Done!\n",
-      "Experiment ( 7 ) for FixedProbCounter Done!\n",
-      "Experiment ( 8 ) for FixedProbCounter Done!\n",
-      "Experiment ( 9 ) for FixedProbCounter Done!\n",
-      "Experiment ( 10 ) for FixedProbCounter Done!\n",
-      "Experiment ( 11 ) for FixedProbCounter Done!\n",
-      "Experiment ( 12 ) for FixedProbCounter Done!\n",
-      "Experiment ( 13 ) for FixedProbCounter Done!\n",
-      "Experiment ( 14 ) for FixedProbCounter Done!\n",
-      "Experiment ( 15 ) for FixedProbCounter Done!\n",
-      "Experiment ( 16 ) for FixedProbCounter Done!\n",
-      "Experiment ( 17 ) for FixedProbCounter Done!\n",
-      "Experiment ( 18 ) for FixedProbCounter Done!\n",
-      "Experiment ( 19 ) for FixedProbCounter Done!\n",
-      "Experiment ( 20 ) for FixedProbCounter Done!\n",
-      "Experiment ( 21 ) for FixedProbCounter Done!\n",
-      "Experiment ( 22 ) for FixedProbCounter Done!\n",
-      "Experiment ( 23 ) for FixedProbCounter Done!\n",
-      "Experiment ( 24 ) for FixedProbCounter Done!\n",
-      "Experiment ( 25 ) for FixedProbCounter Done!\n",
-      "Experiment ( 26 ) for FixedProbCounter Done!\n",
-      "Experiment ( 27 ) for FixedProbCounter Done!\n",
-      "Experiment ( 28 ) for FixedProbCounter Done!\n",
-      "Experiment ( 29 ) for FixedProbCounter Done!\n",
-      "Experiment ( 30 ) for FixedProbCounter Done!\n",
-      "Experiment ( 31 ) for FixedProbCounter Done!\n",
-      "Experiment ( 32 ) for FixedProbCounter Done!\n",
-      "Experiment ( 33 ) for FixedProbCounter Done!\n",
-      "Experiment ( 34 ) for FixedProbCounter Done!\n",
-      "Experiment ( 35 ) for FixedProbCounter Done!\n",
-      "Experiment ( 36 ) for FixedProbCounter Done!\n",
-      "Experiment ( 37 ) for FixedProbCounter Done!\n",
-      "Experiment ( 38 ) for FixedProbCounter Done!\n",
-      "Experiment ( 39 ) for FixedProbCounter Done!\n",
-      "Experiment ( 40 ) for FixedProbCounter Done!\n",
-      "Experiment ( 41 ) for FixedProbCounter Done!\n",
-      "Experiment ( 42 ) for FixedProbCounter Done!\n",
-      "Experiment ( 43 ) for FixedProbCounter Done!\n",
-      "Experiment ( 44 ) for FixedProbCounter Done!\n",
-      "Experiment ( 45 ) for FixedProbCounter Done!\n",
-      "Experiment ( 46 ) for FixedProbCounter Done!\n",
-      "Experiment ( 47 ) for FixedProbCounter Done!\n",
-      "Experiment ( 48 ) for FixedProbCounter Done!\n",
-      "Experiment ( 49 ) for FixedProbCounter Done!\n",
-      "Experiment ( 50 ) for FixedProbCounter Done!\n",
-      "Save Complete!!\n",
-      "It took ( 26.341975688934326 ) secs to complete FixedProbCounter\n",
-      "Experiment ( 1 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 2 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 3 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 4 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 5 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 6 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 7 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 8 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 9 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 10 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 11 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 12 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 13 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 14 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 15 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 16 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 17 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 18 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 19 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 20 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 21 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 22 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 23 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 24 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 25 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 26 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 27 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 28 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 29 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 30 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 31 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 32 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 33 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 34 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 35 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 36 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 37 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 38 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 39 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 40 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 41 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 42 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 43 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 44 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 45 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 46 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 47 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 48 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 49 ) for DecreasingProbCounter Done!\n",
-      "Experiment ( 50 ) for DecreasingProbCounter Done!\n",
-      "Save Complete!!\n",
-      "It took ( 265.19746685028076 ) secs to complete DecreasingProbCounter\n"
+      "Working on hamlet\n",
+      "started ExactCounter\n",
+      "It took ( 5.906909942626953 ) secs\n",
+      "started FixedProbCounter\n",
+      "It took ( 5.973182201385498 ) secs\n",
+      "started DecreasingProbCounter\n",
+      "It took ( 27.36237382888794 ) secs\n",
+      "--------------------------------------------------\n",
+      "Working on macbeth\n",
+      "started ExactCounter\n",
+      "It took ( 2.2810723781585693 ) secs\n",
+      "started FixedProbCounter\n",
+      "It took ( 2.866624355316162 ) secs\n",
+      "started DecreasingProbCounter\n",
+      "It took ( 13.725178718566895 ) secs\n",
+      "--------------------------------------------------\n",
+      "Working on romeo and juliet\n",
+      "started ExactCounter\n",
+      "It took ( 2.511944055557251 ) secs\n",
+      "started FixedProbCounter\n",
+      "It took ( 2.9684369564056396 ) secs\n",
+      "started DecreasingProbCounter\n",
+      "It took ( 18.266517639160156 ) secs\n",
+      "--------------------------------------------------\n",
+      "Working on tempest\n",
+      "started ExactCounter\n",
+      "It took ( 2.8843345642089844 ) secs\n",
+      "started FixedProbCounter\n",
+      "It took ( 3.1643834114074707 ) secs\n",
+      "started DecreasingProbCounter\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\iCETEE\\AppData\\Local\\Temp/ipykernel_7764/1632758643.py:80: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "  self.register['Avg Percent (100%)'] = avg_percent.round(4) # round to 2dps\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It took ( 17.929994344711304 ) secs\n",
+      "--------------------------------------------------\n",
+      "Working on othello the moor of venice\n",
+      "started ExactCounter\n",
+      "It took ( 2.7796874046325684 ) secs\n",
+      "started FixedProbCounter\n",
+      "It took ( 3.29192852973938 ) secs\n",
+      "started DecreasingProbCounter\n",
+      "It took ( 20.78429889678955 ) secs\n",
+      "--------------------------------------------------\n",
+      "Working on taming of the shrew\n",
+      "started ExactCounter\n",
+      "It took ( 2.6521692276000977 ) secs\n",
+      "started FixedProbCounter\n",
+      "It took ( 3.0435965061187744 ) secs\n",
+      "started DecreasingProbCounter\n",
+      "It took ( 17.33279061317444 ) secs\n",
+      "--------------------------------------------------\n",
+      "Working on merchant of vernice\n",
+      "started ExactCounter\n",
+      "It took ( 2.604238748550415 ) secs\n",
+      "started FixedProbCounter\n",
+      "It took ( 3.0634326934814453 ) secs\n",
+      "started DecreasingProbCounter\n",
+      "It took ( 17.298550844192505 ) secs\n",
+      "--------------------------------------------------\n"
      ]
     }
    ],
    "source": [
-    "AC = ApproximateCounter()\n",
-    "AC.LoadTextFile(filename='shakespeare_without_lic')\n",
+    "literary_works = [\n",
+    "    'hamlet',\n",
+    "    'macbeth',\n",
+    "    'romeo and juliet',\n",
+    "    'tempest',\n",
+    "    'othello the moor of venice',\n",
+    "    'taming of the shrew',\n",
+    "    'merchant of vernice'\n",
+    "]\n",
     "\n",
-    "start_exact = time.time()\n",
-    "AC.ExactCounter(n_experiments=50)\n",
-    "AC.Save2CSV()\n",
-    "print('It took (', time.time() - start_exact, ') secs to complete ExactCounter')\n",
+    "for literary_work in literary_works:\n",
+    "    print('Working on',literary_work)\n",
+    "    AC = ApproximateCounter()\n",
+    "    AC.LoadTextFile(filename=literary_work)\n",
     "\n",
-    "start_fixed = time.time()\n",
-    "AC.FixedProbCounter(n_experiments=50)\n",
-    "AC.Save2CSV()\n",
-    "print('It took (', time.time() - start_fixed, ') secs to complete FixedProbCounter')\n",
+    "    print('started ExactCounter')\n",
+    "    start_exact = time.time()\n",
+    "    AC.ExactCounter(n_experiments=100)\n",
+    "    AC.Save2CSV()\n",
+    "    print('It took (', time.time() - start_exact, ') secs')\n",
     "\n",
-    "start_decreased = time.time()\n",
-    "AC.DecreasingProbCounter(n_experiments=50)\n",
-    "AC.Save2CSV()\n",
-    "print('It took (', time.time() - start_decreased, ') secs to complete DecreasingProbCounter')\n",
+    "    print('started FixedProbCounter')\n",
+    "    start_fixed = time.time()\n",
+    "    AC.FixedProbCounter(n_experiments=100)\n",
+    "    AC.Save2CSV()\n",
+    "    print('It took (', time.time() - start_fixed, ') secs')\n",
+    "\n",
+    "    print('started DecreasingProbCounter')\n",
+    "    start_decreased = time.time()\n",
+    "    AC.DecreasingProbCounter(n_experiments=100)\n",
+    "    AC.Save2CSV()\n",
+    "    print('It took (', time.time() - start_decreased, ') secs')\n",
+    "\n",
+    "    print('-'*50)\n",
+    "    \n",
     "\n"
    ]
   },
