Output changed to output

--- a/probability_counter/notebook/ApproximateCounting.ipynb
+++ b/probability_counter/notebook/ApproximateCounting.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 731,
+   "execution_count": 736,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
     "    def LoadTextFile(self, filename='sample'):\n",
     "        self.filename = filename\n",
     "        filename = filename + '.txt'\n",
-    "        text_file_path = os.path.join(self.textFilesDirectory, filename)\n",
+    "        text_file_path = os.path.join(self.textFilesDirectory, 'shakespeare', filename)\n",
     "        with open(text_file_path, 'r', encoding=\"utf8\") as file:\n",
     "            text_data = file.readlines()\n",
     "\n",
@@ -54,7 +54,7 @@
     "        self.text_data = ''.join(filter(str.isalnum, self.text_data)).upper()\n",
     "    \n",
     "\n",
-    "    def Save2CSV(self, filename=None, dir_name='Output'):\n",
+    "    def Save2CSV(self, filename=None, dir_name='output'):\n",
     "        \"\"\"\n",
     "        Saves register df to csv\n",
     "        Args:\n",
@@ -198,95 +198,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 732,
+   "execution_count": 737,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Working on hamlet\n",
+      "Working on hamlet-english\n",
       "started ExactCounter\n",
-      "It took ( 5.906909942626953 ) secs\n",
+      "It took ( 3.512850284576416 ) secs\n",
       "started FixedProbCounter\n",
-      "It took ( 5.973182201385498 ) secs\n",
+      "It took ( 4.34348464012146 ) secs\n",
       "started DecreasingProbCounter\n",
-      "It took ( 27.36237382888794 ) secs\n",
+      "It took ( 27.597705125808716 ) secs\n",
       "--------------------------------------------------\n",
-      "Working on macbeth\n",
+      "Working on hamlet-french\n",
       "started ExactCounter\n",
-      "It took ( 2.2810723781585693 ) secs\n",
+      "It took ( 4.539613723754883 ) secs\n",
       "started FixedProbCounter\n",
-      "It took ( 2.866624355316162 ) secs\n",
+      "It took ( 5.694754123687744 ) secs\n",
       "started DecreasingProbCounter\n",
-      "It took ( 13.725178718566895 ) secs\n",
+      "It took ( 39.505908489227295 ) secs\n",
       "--------------------------------------------------\n",
-      "Working on romeo and juliet\n",
+      "Working on hamlet-german\n",
       "started ExactCounter\n",
-      "It took ( 2.511944055557251 ) secs\n",
+      "It took ( 3.467275857925415 ) secs\n",
       "started FixedProbCounter\n",
-      "It took ( 2.9684369564056396 ) secs\n",
+      "It took ( 4.210341930389404 ) secs\n",
       "started DecreasingProbCounter\n",
-      "It took ( 18.266517639160156 ) secs\n",
-      "--------------------------------------------------\n",
-      "Working on tempest\n",
-      "started ExactCounter\n",
-      "It took ( 2.8843345642089844 ) secs\n",
-      "started FixedProbCounter\n",
-      "It took ( 3.1643834114074707 ) secs\n",
-      "started DecreasingProbCounter\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\iCETEE\\AppData\\Local\\Temp/ipykernel_7764/1632758643.py:80: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-      "  self.register['Avg Percent (100%)'] = avg_percent.round(4) # round to 2dps\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "It took ( 17.929994344711304 ) secs\n",
-      "--------------------------------------------------\n",
-      "Working on othello the moor of venice\n",
-      "started ExactCounter\n",
-      "It took ( 2.7796874046325684 ) secs\n",
-      "started FixedProbCounter\n",
-      "It took ( 3.29192852973938 ) secs\n",
-      "started DecreasingProbCounter\n",
-      "It took ( 20.78429889678955 ) secs\n",
-      "--------------------------------------------------\n",
-      "Working on taming of the shrew\n",
-      "started ExactCounter\n",
-      "It took ( 2.6521692276000977 ) secs\n",
-      "started FixedProbCounter\n",
-      "It took ( 3.0435965061187744 ) secs\n",
-      "started DecreasingProbCounter\n",
-      "It took ( 17.33279061317444 ) secs\n",
-      "--------------------------------------------------\n",
-      "Working on merchant of vernice\n",
-      "started ExactCounter\n",
-      "It took ( 2.604238748550415 ) secs\n",
-      "started FixedProbCounter\n",
-      "It took ( 3.0634326934814453 ) secs\n",
-      "started DecreasingProbCounter\n",
-      "It took ( 17.298550844192505 ) secs\n",
+      "It took ( 27.656727075576782 ) secs\n",
       "--------------------------------------------------\n"
      ]
     }
    ],
    "source": [
     "literary_works = [\n",
-    "    'hamlet',\n",
-    "    'macbeth',\n",
-    "    'romeo and juliet',\n",
-    "    'tempest',\n",
-    "    'othello the moor of venice',\n",
-    "    'taming of the shrew',\n",
-    "    'merchant of vernice'\n",
+    "    'hamlet-english',\n",
+    "    'hamlet-french',\n",
+    "    'hamlet-german',\n",
     "]\n",
     "\n",
     "for literary_work in literary_works:\n",
@@ -314,6 +264,7 @@
     "\n",
     "    print('-'*50)\n",
     "    \n",
+    "print('Done!!!')\n",
     "\n"
    ]
   },
