--- a/probability_counter/notebook/ApproximateCounting.ipynb
+++ b/probability_counter/notebook/ApproximateCounting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 686,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 736,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,14 +88,14 @@
     "        for column in self.register.columns[1:]:\n",
     "            self.register[column] = self.register[column].astype('int64')\n",
     "\n",
-    "        Min = self.register.iloc[:,1:].min(axis=1, skipna=True)\n",
-    "        Max = self.register.iloc[:,1:].max(axis=1, skipna=True)\n",
-    "        Average = self.register.iloc[:,1:].mean(axis=1, skipna=True)\n",
+    "        Min = self.register.iloc[:,1:].min(axis=1, skipna=True).copy()\n",
+    "        Max = self.register.iloc[:,1:].max(axis=1, skipna=True).copy()\n",
+    "        Average = self.register.iloc[:,1:].mean(axis=1, skipna=True).apply(np.ceil).astype(int).copy()\n",
     "\n",
     "        # change average from float to int rounded up\n",
     "        self.register['Minimum'] = Min\n",
     "        self.register['Maximum'] = Max\n",
-    "        self.register['Average'] = Average.apply(np.ceil).astype(int)\n",
+    "        self.register['Average'] = Average\n",
     "\n",
     "        # computing average percentage\n",
     "        avg_sum = np.sum(self.register['Average'], axis=None)\n",
@@ -198,45 +198,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 737,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Working on hamlet-english\n",
-      "started ExactCounter\n",
-      "It took ( 3.512850284576416 ) secs\n",
-      "started FixedProbCounter\n",
-      "It took ( 4.34348464012146 ) secs\n",
-      "started DecreasingProbCounter\n",
-      "It took ( 27.597705125808716 ) secs\n",
-      "--------------------------------------------------\n",
-      "Working on hamlet-french\n",
-      "started ExactCounter\n",
-      "It took ( 4.539613723754883 ) secs\n",
-      "started FixedProbCounter\n",
-      "It took ( 5.694754123687744 ) secs\n",
-      "started DecreasingProbCounter\n",
-      "It took ( 39.505908489227295 ) secs\n",
-      "--------------------------------------------------\n",
-      "Working on hamlet-german\n",
-      "started ExactCounter\n",
-      "It took ( 3.467275857925415 ) secs\n",
-      "started FixedProbCounter\n",
-      "It took ( 4.210341930389404 ) secs\n",
-      "started DecreasingProbCounter\n",
-      "It took ( 27.656727075576782 ) secs\n",
-      "--------------------------------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "literary_works = [\n",
+    "    'aMidsummerNightsDream-english',\n",
+    "    'aMidsummerNightsDream-french',\n",
+    "    'aMidsummerNightsDream-german',\n",
     "    'hamlet-english',\n",
     "    'hamlet-french',\n",
     "    'hamlet-german',\n",
+    "    'juliusCaesar-english',\n",
+    "    'juliusCaesar-french',\n",
+    "    'juliusCaesar-german',\n",
+    "    'kingRichardIII-english',\n",
+    "    'kingRichardIII-french',\n",
+    "    'kingRichardIII-german',\n",
+    "    'macbeth-english',\n",
+    "    'macbeth-french',\n",
+    "    'macbeth-german',\n",
+    "    'merchantOfVenice-english',\n",
+    "    'merchantOfVenice-french',\n",
+    "    'merchantOfVenice-german',\n",
+    "    'othello-english',\n",
+    "    'othello-french',\n",
+    "    'othello-german',\n",
+    "    'romeoAndJuliet-english',\n",
+    "    'romeoAndJuliet-french',\n",
+    "    'romeoAndJuliet-german',\n",
+    "    'theTempest-english',\n",
+    "    'theTempest-french',\n",
+    "    'theTempest-german',\n",
     "]\n",
     "\n",
     "for literary_work in literary_works:\n",
