latex first present. only one lit work in output

--- a/probability_counter/notebook/ApproximateCounting.ipynb
+++ b/probability_counter/notebook/ApproximateCounting.ipynb
@@ -82,27 +82,35 @@
     "        extract the compiled register.\n",
     "        counts formatted as integer.\n",
     "        NaN values replaced by 0's.\n",
-    "        Obtain metrics (min, max, average)\n",
+    "        Obtain metrics (min, max, std, var, average, avg %, mae)\n",
     "        \"\"\"\n",
     "        self.register = self.register.fillna(0)\n",
     "        for column in self.register.columns[1:]:\n",
     "            self.register[column] = self.register[column].astype('int64')\n",
     "\n",
+    "        # get metrics\n",
     "        Min = self.register.iloc[:,1:].min(axis=1, skipna=True).copy()\n",
     "        Max = self.register.iloc[:,1:].max(axis=1, skipna=True).copy()\n",
     "        Average = self.register.iloc[:,1:].mean(axis=1, skipna=True).apply(np.ceil).astype(int).copy()\n",
-    "\n",
+    "        Std = self.register.iloc[:,1:].std(axis=1, skipna=True).round(4).copy()\n",
+    "        Var = self.register.iloc[:,1:].var(axis=1, skipna=True).round(4).copy()\n",
+    "        MAE = self.register.iloc[:,1:].var(axis=1, skipna=True).round(4).copy()\n",
+    "        \n",
     "        # change average from float to int rounded up\n",
     "        self.register['Minimum'] = Min\n",
     "        self.register['Maximum'] = Max\n",
     "        self.register['Average'] = Average\n",
+    "        self.register['STD'] = Std\n",
+    "        self.register['Variance'] = Var\n",
     "\n",
     "        # computing average percentage\n",
     "        avg_sum = np.sum(self.register['Average'], axis=None)\n",
-    "        avg_percent = (self.register['Average']/avg_sum)*100\n",
-    "        self.register['Avg Percent (100%)'] = avg_percent.round(4) # round to 2dps\n",
+    "        avg_percent = (self.register['Average'].copy()/avg_sum)*100\n",
+    "        self.register['Avg %'] = avg_percent.round(4) # round to 2dps\n",
+    "        self.register.sort_values(by='Avg %', ascending=False, inplace=True)\n",
     "\n",
-    "        self.register.sort_values(by='Avg Percent (100%)', ascending=False, inplace=True)\n",
+    "        # computing the mean absolute error sum(|e_i|)/n\n",
+    "        self.register['Mean Absolute Error'] = self.register.iloc[:,1: self.n_experiments+1].copy().apply(lambda x: abs(x-Average[x.index])).mean(axis=1)\n",
     "\n",
     "\n",
     "    def AddCounts2Register(self, exp_number, rows):\n",
@@ -123,8 +131,9 @@
     "\n",
     "    def FixedProbCounter(self, n_experiments=1):\n",
     "        \"\"\"\n",
-    "        Finds the actual number of distint letters in a literary work.\n",
+    "        Finds the actual number of distint letters in a literary work, with a probability of 1/2 of counting a new occurence.\n",
     "        \"\"\"\n",
+    "        self.n_experiments = n_experiments\n",
     "        self.register = pd.DataFrame(columns=['Letter'])\n",
     "        self.count_method = 'FixedProbCounter'\n",
     "\n",
@@ -148,6 +157,12 @@
     "\n",
     "\n",
     "    def DecreasingProbCounter(self, n_experiments=1):\n",
+    "        \"\"\"\n",
+    "        counts new letter occurence with decreasing probability each time. \n",
+    "        For instance, the 10'th occurence will have probability 1/sqrt(2)**10 probability of getting counted.\n",
+    "        This means the more frequent \n",
+    "        \"\"\"\n",
+    "        self.n_experiments = n_experiments\n",
     "        self.register = pd.DataFrame(columns=['Letter'])\n",
     "        self.count_method = 'DecreasingProbCounter'\n",
     "\n",
@@ -177,6 +192,7 @@
     "        Get all letter, frequency for each experiment.\n",
     "        Add letter, frequency to register\n",
     "        \"\"\"\n",
+    "        self.n_experiments = n_experiments\n",
     "        self.register = pd.DataFrame(columns=['Letter'])\n",
     "        self.count_method = 'ExactCounter'\n",
     "        for exp_number in range(1, n_experiments + 1):\n",
@@ -204,39 +220,39 @@
    "source": [
     "literary_works = [\n",
     "    'aMidsummerNightsDream-english',\n",
-    "    'aMidsummerNightsDream-french',\n",
-    "    'aMidsummerNightsDream-german',\n",
-    "    'hamlet-english',\n",
-    "    'hamlet-french',\n",
-    "    'hamlet-german',\n",
-    "    'juliusCaesar-english',\n",
-    "    'juliusCaesar-french',\n",
-    "    'juliusCaesar-german',\n",
-    "    'kingRichardIII-english',\n",
-    "    'kingRichardIII-french',\n",
-    "    'kingRichardIII-german',\n",
-    "    'macbeth-english',\n",
-    "    'macbeth-french',\n",
-    "    'macbeth-german',\n",
-    "    'merchantOfVenice-english',\n",
-    "    'merchantOfVenice-french',\n",
-    "    'merchantOfVenice-german',\n",
-    "    'othello-english',\n",
-    "    'othello-french',\n",
-    "    'othello-german',\n",
-    "    'romeoAndJuliet-english',\n",
-    "    'romeoAndJuliet-french',\n",
-    "    'romeoAndJuliet-german',\n",
-    "    'theTempest-english',\n",
-    "    'theTempest-french',\n",
-    "    'theTempest-german',\n",
+    "    # 'aMidsummerNightsDream-french',\n",
+    "    # 'aMidsummerNightsDream-german',\n",
+    "    # 'hamlet-english',\n",
+    "    # 'hamlet-french',\n",
+    "    # 'hamlet-german',\n",
+    "    # 'juliusCaesar-english',\n",
+    "    # 'juliusCaesar-french',\n",
+    "    # 'juliusCaesar-german',\n",
+    "    # 'kingRichardIII-english',\n",
+    "    # 'kingRichardIII-french',\n",
+    "    # 'kingRichardIII-german',\n",
+    "    # 'macbeth-english',\n",
+    "    # 'macbeth-french',\n",
+    "    # 'macbeth-german',\n",
+    "    # 'merchantOfVenice-english',\n",
+    "    # 'merchantOfVenice-french',\n",
+    "    # 'merchantOfVenice-german',\n",
+    "    # 'othello-english',\n",
+    "    # 'othello-french',\n",
+    "    # 'othello-german',\n",
+    "    # 'romeoAndJuliet-english',\n",
+    "    # 'romeoAndJuliet-french',\n",
+    "    # 'romeoAndJuliet-german',\n",
+    "    # 'theTempest-english',\n",
+    "    # 'theTempest-french',\n",
+    "    # 'theTempest-german',\n",
     "]\n",
     "\n",
     "for literary_work in literary_works:\n",
-    "    print('Working on',literary_work)\n",
     "    AC = ApproximateCounter()\n",
     "    AC.LoadTextFile(filename=literary_work)\n",
-    "\n",
+    "    print('Working on',literary_work)\n",
+    "    \n",
     "    print('started ExactCounter')\n",
     "    start_exact = time.time()\n",
     "    AC.ExactCounter(n_experiments=100)\n",
